src/styles/index.scss
@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300&display=swap');
@import url("https://fonts.googleapis.com/css2?family=Roboto:wght@700&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Trirong:ital,wght@1,800&display=swap");
@import url("https://fonts.googleapis.com/css2?family=Lobster+Two:ital,wght@1,700&display=swap");

html {
    font-family: 'Raleway', sans-serif;
    font-family: "Times New Roman", Times, serif;
    -ms-text-size-adjust: 100%;
    -webkit-text-size-adjust: 100%;
}
body {
    margin: 0;
    min-width: 320px;
    width: 320px;
    width: auto !important;
    font-family: 'Raleway', sans-serif;
    -webkit-font-smoothing: antialiased;
    -moz-osx-font-smoothing: grayscale;
    background-color: rgb(47, 47, 47);
}

h1 {
    // font-family: 'Trirong', serif;
    // font-family: 'Roboto', sans-serif;
    font-size: 42px;
    margin-top: 0;

}

h2 {
    font-family: 'Lobster Two', cursive;
    border-bottom: 1px solid rgb(156, 155, 155);
    font-size: 28px;
}

article,
aside,
details,
figcaption,
figure,
footer,
header,
main,
menu,
nav,
section,
summary {
    display: block;
}


// // Not used atm (Idea was a grid for extra large screens):
// .sectionsGrid {
//     display: grid;
//     grid-column-gap: 0;
//     // grid-template-columns: repeat(auto-fit, minmax(900px, 1fr));
// }


a {
    color: rgb(214, 221, 221);
}

.hero-scroll {
    color: white;
    height: 100px;
    position: absolute;
    opacity: 0.0;
    bottom: 3rem;
    left: 48vw;
    animation: blink 5s ease-in infinite;
    animation-delay: 2s;
}

@keyframes blink {
	0% {
		opacity: 0;
	}
	50% {
		opacity: 0.8;
    }
    100% {
		opacity: 0;
	}
}

.hero {
    padding-top: 25vh;
}

